[package]
name = "brisbane-bin-data"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "time",
] }
