[package]
name = "brisbane-bin-data"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "rustls",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tokio = { version = "1.52.3", features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "time",
] }
